discussion/kv_engine/130910/130910_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[1/N] Use chrono-based UptimeClock instead of rel_time_t

Add a new std::chrono based class - UptimeClock. This is a clock which
counts the number of seconds since the memcached process started up.

This is functionally equivilant to the rel_time_t type, however it
much safer. rel_time_t is error-prone, given it is just a typedef to
uint32_t and hence was compatible with time_t and similar types. As
such it was possble to assign/compare a rel_time_t to time_t and no
error would be flagged.

Convert the bulk of the uses of rel_time_t to UptimeClock and related
chrono types (e.g. std::chrono::seconds).

Change-Id: I74e63f56811eb5e5361570a26d159b67c17e9d36

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-06-18 19:44:14.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-18 19:50:11.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24678/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/platform/include/relaxed_atomic.h:33:15:
error: no viable conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24678/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2853/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/relaxed_atomic.h:33:15: error: no viable conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > >" [clang-diagnostic-error]
        store(0);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:31:15: note: in instantiation of member function "cb::RelaxedAtomic<std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > >::RelaxedAtomic" requested here
ActiveStream::ActiveStream(EventuallyPersistentEngine* e,
              ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:610:14: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "int" to "const std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > &" for 1st argument
      struct time_point
             ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:610:14: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > &&" for 1st argument
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:627:14: note: candidate template ignored: could not match "time_point<UptimeClock, type-parameter-0-0>" against "int"
          constexpr time_point(const time_point<clock, _Dur2>& __t)
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/relaxed_atomic.h:52:18: note: passing argument to parameter "desired" here
    void store(T desired) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/relaxed_atomic.h:111:15: error: no viable conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > >" [clang-diagnostic-error]
        store(0);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:774:23: note: in instantiation of member function "cb::RelaxedAtomic<std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > >::reset" requested here
        takeoverStart.reset();
                      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:610:14: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "int" to "const std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > &" for 1st argument
      struct time_point
             ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:610:14: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > > &&" for 1st argument
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:627:14: note: candidate template ignored: could not match "time_point<UptimeClock, type-parameter-0-0>" against "int"
          constexpr time_point(const time_point<clock, _Dur2>& __t)
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/relaxed_atomic.h:52:18: note: passing argument to parameter "desired" here
    void store(T desired) {
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2853/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/relaxed_atomic.h:33:15:
error: no viable conversion from "int" to "std::chrono::time_point<UptimeClock, std::chrono::duration<unsigned int, std::ratio<1, 1> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2853/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1358/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
